[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/board/damage_tracker.gd" id="1_tracker"]

[node name="DamageTracker" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
size_flags_vertical = 3
script = ExtResource("1_tracker")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.85, 0.75, 0.5, 1)
text = "NO DAMAGE"
horizontal_alignment = 1

[node name="RowsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 1
